--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "json-rules-poc-cli",
-  "version": "1.3.0",
+  "version": "1.0.0",
   "description": "CLI utility to test Rules engine",
   "main": "dist/json-rules-poc-cli.js",
   "scripts": {
@@ -10,8 +10,8 @@
     "exec": "node --require ts-node/register src/index.ts -f ./data/facts.json -r ./data/rules.json",
     "deploy": "npm run compile;"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Rodrigo de Souza <rsouza01@gmail.com>",
+  "license": "MIT",
   "dependencies": {
     "commander": "^2.19.0",
     "json-rules-engine": "^5.0.3"
