Unit tests scafolding added

--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "clean": "rm -rf reports/ .webpack/ dist/ .nyc_output/",
     "compile": "npx webpack --config webpack.config.js",
     "exec": "node --require ts-node/register src/index.ts -f ./data/facts.json -r ./data/rules.json",
-    "deploy": "npm run compile;"
+    "deploy": "npm run compile;",
+    "eslint:run": "eslint './src/**/*.{ts,tsx}'",
+    "eslint:fix": "eslint './src/**/*.{ts,tsx}' --fix",
+    "test": "npm run tests:unit",
+    "tests:unit": "npx mocha --recursive -r ts-node/register ./test/**/*.unit.ts"
   },
   "author": "Rodrigo de Souza <rsouza01@gmail.com>",
   "license": "MIT",
@@ -17,12 +21,22 @@
     "json-rules-engine": "^5.0.3"
   },
   "devDependencies": {
-    "@types/node": "^8.10.37",
-    "eslint": "^5.8.0",
+    "@types/chai": "^4.2.11",
+    "@types/debug": "^4.1.5",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^8.10.61",
+    "@types/sinon": "^9.0.4",
+    "@typescript-eslint/eslint-plugin": "^3.1.0",
+    "@typescript-eslint/parser": "^3.1.0",
+    "chai": "^4.2.0",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
+    "mocha": "^7.2.0",
+    "nyc": "^15.1.0",
     "ts-loader": "^5.3.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
