--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "paths": {
       "*": ["src/*"]
     },
-    "outDir": ".dist/",
+    "outDir": "dist/",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
