--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "MIT",
   "dependencies": {
     "commander": "^2.19.0",
+    "json-logic-js": "^1.2.2",
     "json-rules-engine": "^5.0.3"
   },
   "devDependencies": {
